# TrinityRay

./: .gitignore  Build.lua  CMakeLists.txt  README.md
RayEngine/: CMakeLists.txt  RayEngine.lua
RayEngine/src/Physics/: Physics.cpp  Physics.h
RayEngine/src/WindowsWindow/: WindowsWindow.cpp  WindowsWindow.h
RayForge/: CMakeLists.txt  RayForge.lua
RayForge/src/: Application.cpp  Application.h  EntryPoint.cpp
Scripts/: Setup-Windows.bat
