# Source's CMake

cmake_minimum_required(VERSION 3.20)
project(TrinityRay)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(ARCH "")
set(BINARY_OUTPUT_DIR "")
set(INTERMEDIATE_OUTPUT_DIR "")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(ARCH "x86_64")
endif()

set(BINARY_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}-${CMAKE_SYSTEM_NAME}-${ARCH}/${PROJECT_NAME}")
set(INTERMEDIATE_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/bin-int/${CMAKE_BUILD_TYPE}-${CMAKE_SYSTEM_NAME}-${ARCH}/${PROJECT_NAME}")

set(ARCHIVE_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR})
set(LIBRARY_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR})
set(RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR})
set(OBJECT_OUTPUT_DIRECTORY ${INTERMEDIATE_OUTPUT_DIR})

add_subdirectory(RayEngine)
add_subdirectory(RayForge)